<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints"
    android:padding="@dimen/fab_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextDescripcionCubrebocas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_descripcion_cubrebocas"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="170dp" />

        <Spinner
            android:id="@+id/spinnerTipoCubrebocas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_tipo_cubrebocas"/>

        <EditText
            android:id="@+id/maximo_usos_cubrebocas"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_maximo_usos"
            android:maxLength="40"
            android:ellipsize="end"
            android:singleLine="true"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>