<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activities_margin"
    android:paddingTop="@dimen/activities_margin"
    android:paddingRight="@dimen/activities_margin"

    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".ConfigActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activities_margin_button">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/activities_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center_vertical"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text="@string/text_activacion_alarmas"
                            android:textColor="@color/design_default_color_error"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:typeface="sans" />

                        <Switch
                            android:id="@+id/activacion_alarmas"
                            android:layout_width="30sp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textOn="@string/text_si"
                            android:textOff="@string/text_no"
                            android:ems="4"
                            android:textColor="@color/colorText"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/activities_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center_vertical"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text="@string/text_distancia_activacion_alarmas"
                            android:textColor="@color/design_default_color_error"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:typeface="sans" />

                        <EditText
                            android:id="@+id/distancia_activacion_alarmas"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:ems="4"
                            android:gravity="center"
                            android:hint="@string/text_max_min"
                            tools:ignore="Autofill"
                            android:textColor="@color/colorText"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/activities_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:text="@string/text_locacion_alarmas"
                            android:textColor="@color/design_default_color_error"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:typeface="sans" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:tools="http://schemas.android.com/tools"
                            android:layout_width="match_parent"
                            android:layout_height="300sp"
                            android:layout_weight="2"
                            android:id="@+id/map"
                            tools:context=".MapsActivity"
                            android:name="com.google.android.gms.maps.SupportMapFragment" />


                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">



                    </TableRow>

                </TableLayout>
    </ScrollView>

    </RelativeLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/activities_margin"
            android:layout_marginRight="@dimen/activities_margin"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ad_unit_id" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
