<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemDeLista"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5sp"
    android:paddingTop="@dimen/activities_margin"
    android:paddingRight="5sp"
    android:paddingBottom="@dimen/activities_margin">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <CheckBox
                android:id="@+id/cubrebocas_seleccionado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/fab_margin"
                android:scaleX="1.35"
                android:scaleY="1.35"
                android:textColor="@color/grisoscuro"
                android:textSize="18sp"
                android:visibility="gone" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/text_fecha"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/uso_fecha"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textColor="@color/colorText"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/text_hora"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/uso_hora"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textColor="@color/colorText"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/text_fue_lavado"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/uso_fue_lavado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textColor="@color/colorText"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>