<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemDeLista"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5sp"
    android:paddingTop="@dimen/activities_margin"
    android:paddingRight="5sp"
    android:paddingBottom="@dimen/activities_margin">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/fondo_item_cubrebocas"
        android:padding="@dimen/activities_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <CheckBox
                android:id="@+id/cubrebocas_seleccionado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/fab_margin"
                android:scaleX="1.35"
                android:scaleY="1.35"
                android:textColor="@color/grisoscuro"
                android:textSize="18sp"
                android:visibility="gone" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:shrinkColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/activities_margin"
                        android:layout_weight="2"
                        android:src="@drawable/head_side_mask_solid"
                        android:visibility="visible"
                        app:civ_border_color="@color/colorPrimary"
                        app:civ_border_width="5sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/text_descripcion"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="sans"
                        android:background="@drawable/celda_tabla_cubrebocas"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/list_row_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textColor="@color/colorText"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/text_tipo"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="sans" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/text_usos"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="sans" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/list_tipo_cubrebocas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textColor="@color/colorText"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cont_usos_max_usos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textColor="@color/colorText"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>